<resources>
  <string name="app_name" translatable="false">MyTask</string>
  <string name="english">English</string>
  <string name="create_new_account">Create new account</string>
  <string name="login">Login</string>
  <string name="login_in">Log in</string>
  <string name="enter_your_email">Enter your email</string>
  <string name="enter_your_password">Enter your password</string>
  <string name="title_activity_home">Boards</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_boards">Boards List</string>
  <string name="menu_inbox">Inbox</string>
  <string name="menu_notifications">Notifications</string>
  <string name="menu_tools">Tools</string>
  <string name="menu_share">Share</string>
  <string name="menu_send">Send</string>
  <string name="contact_us">Contact Us</string>
  <string name="settings">Settings</string>
  <string name="boards">Boards</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
  <string name="no_connection_msg">no internet connection</string>
  <string name="continu">Continue</string>
  <string name="change_password">Change Password</string>
  <string name="old_password">Old Password</string>
  <string name="new_password">New Password</string>
  <string name="confirm_password">Confirm Password</string>
  <string name="confirm_password_msg">confirm your password</string>
  <string name="valid_input_msg">enter all required fields</string>
  <string name="sign_out">Log Out</string>
  <string name="arabaic">Arabic</string>
  <string name="type_message">Type Message Here</string>
  <string name="name">Name</string>
  <string name="status">Status</string>
  <string name="add_date">Add Date</string>
  <string name="start_date">Start Date</string>
  <string name="due_date">Due Date</string>
  <string name="meeting_link">Meeting Link</string>
  <string name="meeting_time">Meeting Time</string>
  <string name="team">Team</string>
  <string name="comments">Comments</string>
  <string name="hint1_comment">Write your first update</string>
  <string name="reply">Reply</string>
  <string name="type_comment">Type Comment</string>
  <string name="update">Update</string>
  <string name="attachment_name">Attach Name</string>
  <string name="loading_msg">loading...</string>
  <string name="ef_error_create_image_file">faild uploading</string>
  <string name="success">Success uploading</string>
  <string name="no_tasks_here">No Tasks Here</string>
  <string name="tasks">Tasks</string>
  <string name="delete">Delete</string>
  <string name="task_name">Task Name:</string>
  <string name="task_status">Status:</string>
  <string name="attachments">Attachments</string>
  <string name="due_date_2">Due date:</string>
  <string name="pattern">%.2f</string>
  <string name="date">Date</string>
  <string name="info">Info</string>
  <string name="no_users_here">no users here</string>
  <string name="inbox">INBOX</string>
  <string name="send">SEND</string>
  <string name="to">To</string>
  <string name="subject">Subject</string>
  <string name="write_message">Write your Message</string>
  <string name="enter_receiver_names">Enter Receiver\'s name</string>
  <string name="send_btn">Send</string>
  <string name="flow_title">Flow Title</string>
</resources>
