<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    tools:context=".ui.activities.MailFormActivity">


    <com.linkedin.android.spyglass.ui.MentionsEditText
      android:id="@+id/editor"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:background="@drawable/rounded"
      android:hint="@string/to"
      android:imeOptions="flagNoExtractUi"
      android:padding="@dimen/_18sdp" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/mentions_grid"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:clickable="true"
      android:elevation="@dimen/_16sdp"
      android:focusable="true"
      android:visibility="gone" />

    <EditText
      android:id="@+id/etTitle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_22sdp"
      android:background="@drawable/rounded"
      android:hint="@string/subject"
      android:imeOptions="flagNoExtractUi"
      android:padding="@dimen/_18sdp" />


    <EditText
      android:id="@+id/etMessage"
      android:layout_width="match_parent"
      android:layout_height="@dimen/_200sdp"
      android:layout_marginTop="@dimen/_22sdp"
      android:layout_marginBottom="@dimen/_20sdp"
      android:background="@drawable/rounded"
      android:gravity="top"
      android:hint="@string/write_message"
      android:imeOptions="actionDone"
      android:inputType="textMultiLine"
      android:padding="@dimen/_18sdp" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/btnSend"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginBottom="@dimen/_36sdp"
      android:paddingStart="@dimen/_36sdp"
      android:paddingEnd="@dimen/_36sdp"
      android:text="@string/send"
      android:textAllCaps="false"
      app:icon="@drawable/ic_send_white"
      app:iconGravity="end" />

  </LinearLayout>
</androidx.core.widget.NestedScrollView>
