<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginStart="16dp"
  android:layout_marginTop="16dp"
  android:layout_marginEnd="16dp"
  android:paddingBottom="12dp">

  <TextView
    android:id="@+id/tvTableName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:text="Table Name"
    android:textColor="#C9000000"
    android:textSize="@dimen/_14ssp"
    app:layout_constraintTop_toTopOf="parent" />

  <View
    android:id="@+id/viewStatusColor"
    android:layout_width="match_parent"
    android:layout_height="3dp"
    android:layout_marginTop="2dp"
    android:background="@android:color/holo_blue_light"
    app:layout_constraintTop_toBottomOf="@id/tvTableName" />

  <View
    android:id="@+id/viewLeft"
    android:layout_width="2dp"
    android:layout_height="0dp"
    android:background="@color/gray"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/viewStatusColor" />

  <View
    android:id="@+id/viewRight"
    android:layout_width="2dp"
    android:layout_height="0dp"
    android:background="@color/gray"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/viewStatusColor" />


  <View
    android:id="@+id/viewBottom"
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:layout_marginTop="2dp"
    android:background="@color/gray"
    app:layout_constraintBottom_toBottomOf="parent" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingTop="8dp"
    android:paddingEnd="8dp"
    android:paddingBottom="12dp"
    app:layout_constraintBottom_toTopOf="@+id/viewBottom"
    app:layout_constraintEnd_toEndOf="@+id/viewRight"
    app:layout_constraintStart_toStartOf="@id/viewLeft"
    app:layout_constraintTop_toBottomOf="@id/viewStatusColor">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_name"
        android:textColor="@android:color/holo_blue_dark" />

      <TextView
        android:id="@+id/tvTaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Task Namend" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_status"
        android:textColor="@android:color/holo_blue_dark" />

      <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text=" Done" />

    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date_2"
        android:textColor="@android:color/holo_blue_dark" />

      <TextView
        android:id="@+id/tvEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text=": 25-03-2003" />

    </LinearLayout>

    <ProgressBar
      android:id="@+id/progress_horizontal"
      style="@style/Widget.AppCompat.ProgressBar.Horizontal"
      android:layout_width="match_parent"
      android:layout_height="4dp"
      android:layout_marginTop="12dp"
      android:max="100" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp">

      <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

      <ImageView
        android:id="@+id/ivDates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_due_date" />

      <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

      <ImageView
        android:id="@+id/ivTeamData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_appointment" />

      <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

      <ImageView
        android:id="@+id/ivMeetingData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_meeting" />

      <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

      <ImageView
        android:id="@+id/ivMoreData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_calendar" />

      <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp">

      <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/btnComments"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        android:textColor="@android:color/holo_blue_light" />

      <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAttachments"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attachments"
        android:textColor="@android:color/holo_blue_light" />

      <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    </LinearLayout>
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>